# lisp-rs

./: '  Cargo.toml  README.md  STYLE.md  grammar.bnf  grammar.ebnf  line_count.sh  lust.ungram
examples/: ack.lisp  ack.scm  asm.scm  bigint.lisp  bootstrap.lisp  calculator.lisp  deadSimpleAST.json  def.lisp  example.e  example.lir  example.lst  fib.scm  gcd.lisp  gcd.scm  guide.scm  hello.lisp  let.lisp  lust.lisp  lust.scm  modules.lisp  mvp.lisp  mvp.scm  scratch.lisp  scratch.scm  simAST.json  simple.ast  simple.el  simple.eli  simple.lir  simple.scm  simpleAST.json  square.lisp  square.scm
lust/: Cargo.toml
lust-compile/: Cargo.toml
lust-compile/src/: lib.rs
lust-compile/src/snapshots/: lust__compiler__tests__compile_int.snap
lust-hir/: Cargo.toml
lust-rename/: Cargo.toml
lust-rename/src/: res.rs
lust-repl/: Cargo.toml
lust-repl/src/: lib.rs
lust-runtime/: Cargo.toml
lust-runtime/src/: lib.rs
lust-syntax/: Cargo.toml
lust-syntax/src/: ast.rs  error.rs  lib.rs  parse.rs  tests.rs
lust-syntax/src/expand/: env.rs  macro.rs  mod.rs  store.rs
lust-syntax/src/parse/: ast.rs  error.rs  mod.rs
lust-syntax/src/read/: mod.rs  sexpr.rs  token.rs
lust-syntax/src/reader/: error.rs  mod.rs  read.rs  sexpr.rs  tests.rs  token.rs
lust-syntax/src/reader/snapshots/: lust__parser__reader__tests__read_rational.snap  lust__parser__reader__tests__read_real.snap  lust__parser__reader__tests__read_string.snap  lust_syntax__reader__read__tests__read_int.snap
lust-util/: Cargo.toml
lust-util/src/: list.rs  span.rs
lust-utils/: Cargo.toml
lust-utils/src/: intern.rs  lib.rs  list.rs  num.rs  span.rs
lust/src/: main.rs  res.rs
src/: #ast.rs#  .main.rs.~undo-tree~  ast.rs  compiler.rs  default_env.rs  env.rs  eval.rs  gc.rs  intern.rs  interner.rs  lex.rs  lexer.rs  lib.rs  list.rs  lower.rs  lust.rs  main.rs  object.rs  parse.rs  parser.rs  reader.rs  repl.rs  sexpr.rs  span.rs  token.rs  vm.rs
src/ast/: atom.rs  cons.rs  env.rs  lambda.rs  list.rs  mod.rs  number.rs  object.rs  symbol.rs
src/ast/number/: mod.rs  rational.rs
src/compile/: error.rs  mod.rs  tests.rs
src/compiler/: mod.rs  tests.rs
src/interpreter/: default_env.rs  mod.rs  repl.rs  runtime_error.rs
src/lexer/: mod.rs  rules.rs
src/object/: cons.rs  env.rs  lambda.rs  list.rs  mod.rs
src/object/number/: complex.rs  float.rs  integer.rs  mod.rs  rational.rs
src/parser/: ast.rs  chum.rs  env.rs  error.rs  lex.rs  lexer.rs  mod.rs  parse.rs  parser_error.rs  sexpr.rs  token.rs
src/parser/lexer/: mod.rs  token.rs
src/parser/reader/: cst.rs  error.rs  mod.rs  sexpr.rs  tests.rs  token.rs
src/parser/sexpr/: cons.rs  env.rs  lambda.rs  list.rs  mod.rs  symbol.rs
src/parser/snapshots/: lust__reader__read_symbol.snap
src/sexpr/: cons.rs  env.rs  list.rs  mod.rs
src/sexpr/number/: float.rs  integer.rs  mod.rs
src/snapshots/: lust__reader__read_add_list.snap  lust__reader__read_bool.snap  lust__reader__read_char.snap  lust__reader__read_float.snap  lust__reader__read_int.snap  lust__reader__read_nested_list.snap  lust__reader__read_rational.snap  lust__reader__read_string.snap
src/stdlib/math/: mod.rs
src/syntax/: parse.rs
src/syntax/parse/: error.rs  mod.rs
src/syntax/parser/: ast.rs  error.rs  parse.rs
src/syntax/read/: read.rs  sexpr.rs  tests.rs  token.rs
src/syntax/reader/: error.rs  mod.rs  read.rs  sexpr.rs  token.rs
src/syntax/snapshots/: lust__parser__tests__parse_int.snap
src/util/: format.rs  intern.rs  list.rs  mod.rs  node.rs
src/vm/: call_frame.rs  chunk.rs  gc.rs  instruction.rs  mod.rs  object.rs  opcode.rs  runtime_error.rs  tests.rs  value.rs  vm.rs
tests/: tests.rs
(+37 files in other folders)
