[package]
name = "lust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.2"
either = "1.8.1"
itertools = "0.10.5"
logos = "0.12.1"
num-bigfloat = "1.6.2"
num-bigint = "0.4"
num-complex = "0.4.3"
num-rational = "0.4.1"
serde = "1.0.152"
serde_json = "1.0.93"
