[package]
name = "lust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta = "1.28.0"
itertools = "0.10.5"
num-bigfloat = "1.6.2"
num-bigint = "0.4"
num-complex = "0.4.3"
num-rational = "0.4.1"
rustyline = { version = "11.0.0", features = ["derive"] }
serde = "1.0.152"
serde_json = "1.0.93"
lasso = { version = "0.6.0", features = ["multi-threaded"] }
once_cell = "1.17.1"
log = "0.4.18"
env_logger = "0.10.0"
logos = "0.13.0"
cstree = { version = "0.12.0", features = ["derive"] }
chumsky = "1.0.0-alpha.4"
ariadne = "0.3.0"
clap = { version = "4.3.0", features = ["cargo", "derive"] }
notify = "6.1.1"
