[package]
name = "lust-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lust-syntax = { path = "../lust-syntax" }
insta = "1.28.0"
itertools = "0.10.5"
num-bigfloat = "1.6.2"
num-bigint = "0.4"
num-complex = "0.4.3"
num-rational = "0.4.1"
rustyline = { version = "11.0.0", features = ["derive"] }
log = "0.4.18"
env_logger = "0.10.0"
clap = { version = "4.3.0", features = ["cargo", "derive"] }
notify = "6.1.1"
