[package]
name = "lust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lust-compile = { path = "../lust-compile" }
lust-syntax = { path = "../lust-syntax" }
lust-util = { path = "../lust-util" }
lust-runtime = { path = "../lust-runtime" }
env_logger = "0.10.0"
insta = { version = "1.28.0", features = ["yaml"] }
clap = { version = "4.3.0", features = ["cargo", "derive"] }
rustyline = "11.0.0"
log = "0.4.18"
logos = "0.13.0"
